part1/exercise7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part1exercise7-svc
spec:
  type: ClusterIP
  selector:
    app: part1exercise7
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 9901
